[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
mongodb = {version = "2.6.0" , features = ["tokio-runtime"],default-features = false}
serde = { version = "1.0.166", features = ["derive"] }
serde_json = "1.0.100"
anyhow = "1.0.71"
tokio = "1.29.1"
rayon = "1.7.0"
futures-util = "0.3.28"
aes = "0.7.5"
block-modes = "0.8.1"
base64 = "0.13.0"
sha2 = "0.9.8"
getrandom = { version = "0.2", features = ["js"] }
